fix: dark mode header

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@ body {
 }
 
 .navbar-fixed {
-	@apply fixed z-[999] bg-white bg-opacity-70 backdrop-blur-sm;
+	@apply fixed z-[999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
 	box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .nav-menu {
-	@apply mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:group-hover:border-b-2 lg:group-hover:border-dark;
+	@apply mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:group-hover:border-b-2 lg:group-hover:border-dark dark:text-white;
 }
 
 .hamburger-line {
